Fixed: font sizes and letter spacing

--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -37,9 +37,9 @@
 	font-size: 0.6em;
 	padding: 0.2em 0.5em;
 	margin: 0.4em;
-	border: 0.1em solid @sub-color;
+	border: 0.1em solid @second-color;
 	border-radius: 1em;
-	color: @sub-color;
+	color: @second-color;
 	.user-select();
 	cursor: pointer;
 	font-weight: lighter;
